--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,29 @@ body a {
   margin: 0 auto;
 }
 
+.button__btn {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  padding: 0px 35px;
+  margin-right: 21px;
+}
+.button__btn a {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+.button__btn--active {
+  background-color: #ff5a30;
+  border: none;
+  padding: 0 39px;
+}
+.button__btn--active a {
+  letter-spacing: 0.1px;
+}
+
 .header {
   margin-bottom: 22px;
 }
@@ -57,7 +80,7 @@ body a {
 }
 .menu__list {
   padding-top: 3px;
-  padding-right: 40px;
+  padding-right: 41px;
 }
 .menu__list a {
   font-size: 16px;
@@ -77,9 +100,11 @@ body a {
 }
 .right__image {
   padding-right: 20px;
+  padding-top: 4px;
 }
 .right__img {
-  padding-right: 12px;
+  padding-right: 11px;
+  padding-top: 4px;
 }
 .right__telef {
   display: flex;
@@ -90,7 +115,7 @@ body a {
   display: flex;
   flex-direction: column;
 }
-.right__link {
+.right__description {
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
@@ -109,4 +134,64 @@ body a {
 }
 .section__conteiner {
   max-width: 577px;
+  padding-top: 221px;
+  padding-left: 1px;
+}
+.section__title {
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 93.6px;
+  letter-spacing: 1px;
+  margin-bottom: 24px;
+  color: #ffffff;
+}
+.section__title span {
+  color: #ff5a30;
+}
+.section__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 60px;
+  color: #ffffff;
+}
+
+.hamburger {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #333;
+  padding: 0 1rem;
+}
+.hamburger__menu {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+}
+.hamburger__hamburh {
+  width: 30px;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #222222;
+  transition: all 0.5s;
+}
+.hamburger__hamburh:nth-of-type(2) {
+  top: calc(50% - 5px);
+}
+.hamburger__hamburh:nth-of-type(3) {
+  top: calc(50% + 5px);
+}
+
+.hamburg__links {
+  display: flex;
+}
+.hamburg__links li a {
+  color: grey;
+  padding: 1rem;
 }
