--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -21,3 +21,29 @@ body {
   max-width: 1230px;
   margin: 0 auto;
 }
+
+.button {
+  &__btn {
+    background: transparent;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+    padding: 0px 35px;
+    margin-right: 21px;
+    a {
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 52px;
+      letter-spacing: 0.5px;
+      color: #ffffff;
+    }
+    &--active {
+      background-color: #ff5a30;
+      border: none;
+      padding: 0 39px;
+
+      a {
+        letter-spacing: 0.1px;
+      }
+    }
+  }
+}
