--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -7,5 +7,27 @@
 
   &__conteiner {
     max-width: 577px;
+    padding-top: 221px;
+    padding-left: 1px;
+  }
+
+  &__title {
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 93.6px;
+    letter-spacing: 1px;
+    margin-bottom: 24px;
+    color: #ffffff;
+    span {
+      color: #ff5a30;
+    }
+  }
+
+  &__text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 60px;
+    color: #ffffff;
   }
 }
