--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+@import "./mixin/media.scss";
 @import "./global.scss";
 @import "./header.scss";
 @import "./section.scss";
