--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,4 @@
 @import "./global.scss";
 @import "./header.scss";
 @import "./section.scss";
-@import "./hamburger.scss";
+@import "./burger.scss";
