--- a/css/main.css
+++ b/css/main.css
@@ -101,22 +101,19 @@ body a {
 
 .menu {
   display: flex;
+  gap: 40px;
 }
 .menu__list {
   padding-top: 3px;
-  padding-right: 41px;
 }
-.menu__list a {
+.menu__link {
   font-size: 16px;
   font-weight: 700;
   line-height: 25.6px;
   color: #424551;
+  display: inline-block;
 }
-.menu__list a:hover {
-  font-size: 18px;
-  color: rgb(241, 110, 22);
-  transition: 0.5s, delay;
-}
+
 .right {
   display: flex;
   flex-wrap: wrap;
@@ -195,4 +192,34 @@ body a {
   line-height: 42px;
   border-bottom: 2px solid #ffffff;
   color: #ffffff;
+}
+
+.burger {
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 50;
+  width: 30px;
+  height: 18px;
+  margin-top: 35px;
+}
+.burger:before, .burger::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background-color: black;
+  transition: all 0.5s ease 0s;
+}
+.burger:before {
+  top: 0;
+}
+.burger:after {
+  bottom: 0;
+}
+.burger__line {
+  background-color: black;
+  width: 80%;
+  height: 2px;
+  transform: scale(1);
 }
