--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -1,3 +1,38 @@
+.burger {
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 50;
+  width: 30px;
+  height: 18px;
+  margin-top: 35px;
+
+  &:before,
+  &::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background-color: black;
+    transition: all 0.5s ease 0s;
+  }
+
+  &:before {
+    top: 0;
+  }
+
+  &:after {
+    bottom: 0;
+  }
+
+  &__line {
+    background-color: black;
+    width: 80%;
+    height: 2px;
+    transform: scale(1);
+  }
+}
+
 @media screen and (min-width: $media767) {
 }
 
