--- a/css/main.css
+++ b/css/main.css
@@ -195,13 +195,19 @@ body a {
 }
 
 .burger {
-  display: flex;
+  display: none;
   align-items: center;
+  justify-content: flex-end;
   position: relative;
   z-index: 50;
   width: 30px;
   height: 18px;
   margin-top: 35px;
+}
+@media only screen and (max-width: 1100px) {
+  .burger {
+    display: flex;
+  }
 }
 .burger:before, .burger::after {
   content: "";
@@ -222,4 +228,17 @@ body a {
   width: 80%;
   height: 2px;
   transform: scale(1);
+}
+
+.burger.active .burger__line {
+  transform: scale(0);
+}
+
+.burger.active:before {
+  top: 50%;
+  transform: rotate(-45deg) translate(0, -50%);
+}
+.burger.active:after {
+  bottom: 50%;
+  transform: rotate(45deg) translate(0, 50%);
 }
