--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -1,6 +1,14 @@
 .burger {
-  display: flex;
+  @media screen and (min-width: $media1100) {
+  }
+
+  @include media("max", $media1100) {
+    display: flex;
+  }
+
+  display: none;
   align-items: center;
+  justify-content: flex-end;
   position: relative;
   z-index: 50;
   width: 30px;
@@ -33,8 +41,18 @@
   }
 }
 
-@media screen and (min-width: $media767) {
+.burger.active .burger__line {
+  transform: scale(0);
 }
 
-@include media("max", $media767) {
+.burger.active {
+  &:before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0, -50%);
+  }
+
+  &:after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0, 50%);
+  }
 }
