--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -35,6 +35,25 @@
 }
 
 .menu {
+  @include media("max", $media1100) {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 50;
+    overflow-y: auto;
+    gap: 100px;
+    padding: 35px;
+    background-image: url("../image/media/media.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: burgerAnimation 0.4s;
+  }
   display: flex;
   gap: 40px;
 
@@ -43,6 +62,10 @@
   }
 
   &__link {
+    @include media("max", $media1100) {
+      font-size: 30px;
+      color: black;
+    }
     font-size: 16px;
     font-weight: 700;
     line-height: 25.6px;
