--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -74,4 +74,17 @@ body {
   }
 }
 
+.wrap {
+  position: relative;
 
+  .wrapper {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    min-height: 243px;
+  }
+
+  &__discription {
+  }
+}
