--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,5 +1,8 @@
 .services {
-  background-color: #e5e8ed;
+  background-image: url("../image/services/bg-image.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 880px;
   .wrapper {
     margin-bottom: 271px;
     position: relative;
@@ -8,14 +11,16 @@
   &__absolute {
     background-color: #ffffff;
     position: absolute;
-    top: 0;
+    top: -103px;
     right: 0;
     left: 0;
+    border-radius: 4px;
   }
 
   &__discription {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    margin-bottom: 32px;
     p {
       font-size: 28px;
       font-weight: 700;
@@ -24,17 +29,25 @@
   }
 
   &__form {
+    display: flex;
+    margin-bottom: 20px;
   }
 
   &__example {
+    display: flex;
+    gap: 24px;
   }
 
   &__cart {
+    &:nth-child(1) {
+      padding-left: 61px;
+    }
     p {
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
       color: #424551;
+      padding-bottom: 8px;
     }
   }
 
@@ -46,7 +59,37 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
+    padding: 0px 73px 0px 15px;
+    border-radius: 4px;
     &--message {
+      padding: 0px 225px 0px 15px;
+    }
+  }
+
+  .button {
+    padding: 28px 25px;
+    &__btn {
+      background: transparent;
+      border-radius: 4px;
+      border: 1px solid #ffffff;
+      padding: 0px 35px;
+      margin-right: 21px;
+      a {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 44px;
+        letter-spacing: 0.5px;
+        color: #ffffff;
+      }
+      &--orange {
+        background-color: #ff5a30;
+        border: none;
+        padding: 0 33px;
+
+        a {
+          letter-spacing: 0.1px;
+        }
+      }
     }
   }
 }
