--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ body a {
   }
 }
 .overview {
-  min-height: 1480px;
+  min-height: 1462px;
 }
 .overview__construction {
   display: flex;
@@ -386,10 +386,10 @@ body a {
 }
 
 .services {
-  background-image: url("../image/services/bg-image.svg");
+  min-height: 880px;
+  background-image: url("../image/services/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 880px;
 }
 .services .wrapper {
   margin-bottom: 271px;
@@ -402,6 +402,7 @@ body a {
   right: 0;
   left: 0;
   border-radius: 4px;
+  z-index: 10;
 }
 .services__discription {
   display: flex;
@@ -469,4 +470,137 @@ body a {
 }
 .services .button__btn--orange a {
   letter-spacing: 0.1px;
+}
+.services .overview {
+  position: absolute;
+}
+.services .overview__content {
+  padding-top: 92px;
+}
+.services .overview__construction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 120px;
+  margin-bottom: 60px;
+}
+.services .overview__title {
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 59.8px;
+  color: #1e212c;
+  padding-bottom: 23px;
+}
+.services .overview__text {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  color: #787a80;
+}
+.services__content {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+.services__block {
+  width: 285px;
+  height: 285px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 90px;
+  position: relative;
+}
+.services__block--development {
+  position: relative;
+  padding-top: 92px;
+}
+.services__block--development::before {
+  content: "";
+  position: absolute;
+  left: 43%;
+  right: 0;
+  top: 36%;
+  bottom: 0;
+  background-image: url("/image/services/Vector2.2.svg");
+  background-repeat: no-repeat;
+}
+.services__block a {
+  color: #1e212c;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+}
+.services__block--background {
+  border-radius: 4px;
+  position: relative;
+  background-image: url("/image/services/image.svg");
+}
+.services__block--background:before {
+  content: "";
+  position: absolute;
+  top: 44.3%;
+  bottom: 0;
+  left: 43%;
+  right: 0;
+  background-image: url("/image/services/Vector3.3.svg");
+  background-repeat: no-repeat;
+  z-index: 20;
+}
+.services__block--background:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1e212c;
+  opacity: 0.6;
+  border-radius: 4px;
+}
+.services__block--background a {
+  color: #ffffff;
+}
+.services__image {
+  padding-bottom: 5px;
+  padding-bottom: 24px;
+}
+.services__image--bott {
+  padding-bottom: 28px;
+}
+.services__scroll .wrapper {
+  display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+}
+.services__scroll .wrapper .button__btn {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  padding: 4px 38px;
+}
+.services__scroll .wrapper .button__btn a {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+.services__scroll .wrapper .button__btn--orange {
+  background-color: #ff5a30;
+  border: none;
+  padding: 7px 37px;
+}
+.services__scroll .wrapper .button__btn--orange a {
+  letter-spacing: 1.1px;
+}
+.services__tx {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  padding-left: 47px;
 }
