--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,8 +1,9 @@
 .services {
-  background-image: url("../image/services/bg-image.svg");
+  min-height: 880px;
+  background-image: url("../image/services/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 880px;
+
   .wrapper {
     margin-bottom: 271px;
     position: relative;
@@ -15,6 +16,7 @@
     right: 0;
     left: 0;
     border-radius: 4px;
+    z-index: 10;
   }
 
   &__discription {
@@ -91,5 +93,159 @@
         }
       }
     }
+  }
+
+  .overview {
+    position: absolute;
+
+    &__content {
+      padding-top: 92px;
+    }
+    &__construction {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 120px;
+      margin-bottom: 60px;
+    }
+
+    &__title {
+      font-size: 46px;
+      font-weight: 700;
+      line-height: 59.8px;
+      color: #1e212c;
+      padding-bottom: 23px;
+    }
+
+    &__text {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 27px;
+      color: #787a80;
+    }
+  }
+
+  &__content {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+
+  &__block {
+    width: 285px;
+    height: 285px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 90px;
+    position: relative;
+
+    &--development {
+      position: relative;
+      padding-top: 92px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 43%;
+        right: 0;
+        top: 36%;
+        bottom: 0;
+        background-image: url("/image/services/Vector2.2.svg");
+        background-repeat: no-repeat;
+      }
+    }
+
+    a {
+      color: #1e212c;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 30px;
+    }
+    &--background {
+      border-radius: 4px;
+      position: relative;
+      background-image: url("/image/services/image.svg");
+
+      &:before {
+        content: "";
+        position: absolute;
+        top: 44.3%;
+        bottom: 0;
+        left: 43%;
+        right: 0;
+        background-image: url("/image/services/Vector3.3.svg");
+        background-repeat: no-repeat;
+        z-index: 20;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #1e212c;
+        opacity: 0.6;
+        border-radius: 4px;
+      }
+      a {
+        color: #ffffff;
+      }
+    }
+  }
+
+  &__image {
+    padding-bottom: 5px;
+    padding-bottom: 24px;
+
+    &--bott {
+      padding-bottom: 28px;
+    }
+  }
+
+  &__scroll {
+    .wrapper {
+      display: flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 18px;
+      .button {
+        &__btn {
+          background: transparent;
+          border-radius: 4px;
+          border: 1px solid #ffffff;
+          padding: 4px 38px;
+
+          a {
+            font-size: 15px;
+            font-weight: 700;
+            line-height: 44px;
+            letter-spacing: 0.5px;
+            color: #ffffff;
+          }
+          &--orange {
+            background-color: #ff5a30;
+            border: none;
+            padding: 7px 37px;
+
+            a {
+              letter-spacing: 1.1px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &__tx {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 42px;
+    padding-left: 47px;
   }
 }
