--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -40,7 +40,15 @@ body {
       background-color: #ff5a30;
       border: none;
       padding: 0 39px;
+      a {
+        letter-spacing: 0.1px;
+      }
+    }
 
+    &--portfolio {
+      background-color: #ff5a30;
+      border: none;
+      padding: 0 39px;
       a {
         letter-spacing: 0.1px;
       }
@@ -70,5 +78,127 @@ body {
 
   &__image {
     padding: 17px 15px;
+  }
+}
+
+.work {
+  .services {
+    &__scroll {
+      .wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 18px;
+        margin: 65px 30px 0 0;
+      }
+    }
+  }
+  .button {
+    margin: 23px 0 0 22px;
+    &__btn {
+      background: transparent;
+      border-radius: 4px;
+      border: 1px solid #ff5a30;
+      padding: 0px 28px;
+      padding-top: 2px;
+
+      a {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 36px;
+        letter-spacing: 0.5px;
+        color: #ff5a30;
+      }
+      &--orange {
+        background-color: #ff5a30;
+        border: none;
+        padding: 0 39px;
+
+        a {
+          letter-spacing: 0.1px;
+        }
+      }
+    }
+  }
+  min-height: 752px;
+  background-color: #ffffff;
+  .wrapper {
+    margin-top: 120px;
+
+    .arrow {
+      width: 48px;
+      height: 48px;
+      background-color: #ff5a30;
+      border-radius: 50%;
+      position: absolute;
+      top: 70%;
+      right: -1%;
+      transform: rotateY(-48%);
+
+      &--opacity {
+        position: absolute;
+        top: 70%;
+        left: 93.1%;
+        background-color: #ffffff;
+        z-index: 50;
+      }
+
+      &__link {
+      }
+
+      &__image {
+        padding: 17px 15px;
+      }
+    }
+  }
+
+  &__top {
+    position: relative;
+    margin-bottom: 60px;
+  }
+
+  &__title {
+    max-width: 729px;
+    min-height: 120px;
+    h3 {
+      font-size: 46px;
+      font-weight: 700;
+      line-height: 59.8px;
+    }
+  }
+
+  &__average {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__cart {
+    width: 390px;
+    height: 440px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 26px 22px 69px -59px #787a80;
+
+    img {
+      margin-bottom: 16px;
+    }
+
+    a {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 30px;
+      color: #1e212c;
+      margin-bottom: 5px;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      color: #787a80;
+    }
   }
 }
