--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -210,16 +210,16 @@
   &__scroll {
     .wrapper {
       display: flex;
-      display: flex;
       align-items: center;
       justify-content: center;
       gap: 18px;
+
       .button {
         &__btn {
           background: transparent;
           border-radius: 4px;
-          border: 1px solid #ffffff;
-          padding: 4px 38px;
+          padding: 2px 42px;
+          background-color: #ff5a30;
 
           a {
             font-size: 15px;
