--- a/css/main.css
+++ b/css/main.css
@@ -75,12 +75,40 @@ body a {
   min-height: 752px;
   background-color: #ffffff;
 }
-.work .services__scroll .wrapper {
+.work .scroll {
+  margin: 59px 0 120px 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 18px;
-  margin: 65px 30px 0 0;
+}
+.work .scroll .button__btn {
+  background: transparent;
+  border-radius: 4px;
+  padding: 2px 42px;
+  background-color: #ff5a30;
+}
+.work .scroll .button__btn a {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+.work .scroll .button__btn--orange {
+  background-color: #ff5a30;
+  border: none;
+  padding: 7px 37px;
+}
+.work .scroll .button__btn--orange a {
+  letter-spacing: 1.1px;
+}
+.work .scroll__tx {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  padding-left: 20px;
+  padding-top: 18px;
 }
 .work .button {
   margin: 23px 0 0 22px;
@@ -506,6 +534,39 @@ body a {
   margin-bottom: 271px;
   position: relative;
 }
+.services .scroll {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+}
+.services .scroll .button__btn {
+  background: transparent;
+  border-radius: 4px;
+  padding: 2px 42px;
+  background-color: #ff5a30;
+}
+.services .scroll .button__btn a {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+.services .scroll .button__btn--orange {
+  background-color: #ff5a30;
+  border: none;
+  padding: 7px 37px;
+}
+.services .scroll .button__btn--orange a {
+  letter-spacing: 1.1px;
+}
+.services .scroll__tx {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  padding-left: 47px;
+}
 .services__absolute {
   background-color: #ffffff;
   position: absolute;
@@ -680,37 +741,4 @@ body a {
 }
 .services__image--bott {
   padding-bottom: 28px;
-}
-.services__scroll .wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 18px;
-}
-.services__scroll .wrapper .button__btn {
-  background: transparent;
-  border-radius: 4px;
-  padding: 2px 42px;
-  background-color: #ff5a30;
-}
-.services__scroll .wrapper .button__btn a {
-  font-size: 15px;
-  font-weight: 700;
-  line-height: 44px;
-  letter-spacing: 0.5px;
-  color: #ffffff;
-}
-.services__scroll .wrapper .button__btn--orange {
-  background-color: #ff5a30;
-  border: none;
-  padding: 7px 37px;
-}
-.services__scroll .wrapper .button__btn--orange a {
-  letter-spacing: 1.1px;
-}
-.services__tx {
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 42px;
-  padding-left: 47px;
 }
