--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -82,15 +82,43 @@ body {
 }
 
 .work {
-  .services {
-    &__scroll {
-      .wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 18px;
-        margin: 65px 30px 0 0;
+  .scroll {
+    margin: 59px 0 120px 0;
+    .button {
+      &__btn {
+        background: transparent;
+        border-radius: 4px;
+        padding: 2px 42px;
+        background-color: #ff5a30;
+
+        a {
+          font-size: 15px;
+          font-weight: 700;
+          line-height: 44px;
+          letter-spacing: 0.5px;
+          color: #ffffff;
+        }
+        &--orange {
+          background-color: #ff5a30;
+          border: none;
+          padding: 7px 37px;
+
+          a {
+            letter-spacing: 1.1px;
+          }
+        }
       }
+    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    &__tx {
+      font-size: 28px;
+      font-weight: 700;
+      line-height: 42px;
+      padding-left: 20px;
+      padding-top: 18px;
     }
   }
   .button {
