--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -246,6 +246,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 177px;
 
   &__title {
     padding-top: 81px;
@@ -264,6 +265,11 @@ body {
 
   &__logo {
     img {
+    }
+    &:hover {
+      background-color: aqua;
+      border-radius: 10%;
+      transition: all;
     }
   }
 }
