--- a/scss/_partners.scss
+++ b/scss/_partners.scss
@@ -38,6 +38,10 @@
       line-height: 25.6px;
       color: #424551;
     }
+
+    span {
+      letter-spacing: 0.2px;
+    }
   }
 
   &__bottom {
