--- a/scss/_raiting.scss
+++ b/scss/_raiting.scss
@@ -1,3 +1,9 @@
+.position {
+  background-image: url("../image/rating/bg-image.png");
+  background-repeat: no-repeat;
+  background-position: -8px -348px;
+}
+
 .raiting {
   .wrapper {
   }
@@ -29,6 +35,13 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    svg {
+      width: 100%;
+      height: 100%;
+
+      circle {
+      }
+    }
 
     p {
       font-size: 32px;
