--- a/scss/_construction.scss
+++ b/scss/_construction.scss
@@ -2,6 +2,7 @@
   .wrapper {
     .top {
       margin-top: 99px;
+      margin-bottom: 0;
       &__title {
         h3 {
         }
@@ -10,11 +11,27 @@
   }
 
   &__conteiner {
+    display: flex;
   }
 
   &__blockLeft {
+    width: 59%;
+  }
+
+  &__workImage {
+    img {
+      border-radius: 4px, 4px, 0px, 0px;
+    }
   }
 
   &__blockRight {
+    width: 41%;
+    margin-left: 23px;
+  }
+
+  &__image {
+    img {
+      border-radius: 4px, 4px, 0px, 0px;
+    }
   }
 }
